--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ NEXTAUTH_URL=http://localhost:3000
 
 # Default URLS
 NEXT_PUBLIC_API_HOST=http://localhost:3000
+NEXT_PUBLIC_EVENTS_API=http://localhost:3334
 NEXT_PUBLIC_HOME_URL=http://localhost:3000
 
 # Don't forget to deploy new contracts by using /parity route
