forgot the tsconfig path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@taikai/dappkit": ["node_modules/@taikai/dappkit/dist/src/index.js"]
+      "@taikai/dappkit": ["node_modules/@taikai/dappkit/dist/src/index.js"],
+      "@scripts/*": ["scripts/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
