--- a/.env.example
+++ b/.env.example
@@ -86,7 +86,7 @@ NEXT_PUBLIC_ALLOW_CUSTOM_TOKENS=1
 NEXT_PUBLIC_CURRENCY_API=https://api.coingecko.com/api/v3
 NEXT_PUBLIC_CURRENCY_ID=bepro-network
 NEXT_PUBLIC_CURRENCY_MAIN=usd
-NEXT_PUBLIC_CURRENCY_VSLIST=[{value: "btc", label: "Bitcoin"}, {value: "eth", label: "Ethereum"}, {value: "usd", label: "US Dollar"}, {value: "eur", label: "Euro"}]
+NEXT_PUBLIC_CURRENCY_VSLIST=[{"value": "btc", "label": "Bitcoin"}, {"value": "eth", "label": "Ethereum"}, {"value": "usd", "label": "US Dollar"}, {"value": "eur", "label": "Euro"}]
 
 NEXT_ELASTIC_SEARCH_URL=
 NEXT_ELASTIC_SEARCH_USERNAME=
