tool to generate settings type using database

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "make-seo": "node make-seo.js",
     "schedules": "node schedules.js",
     "lint": "npx eslint . --fix --ext .ts,.tsx",
+    "generate-settings-types": "node ./scripts/settings/generate-types.js",
     "deploy:local": "node ./scripts/deploy-v2 -n development",
     "deploy:kovan": "node ./scripts/deploy-v2 -n kovan",
     "deploy:ropsten": "node ./scripts/deploy-v2 -n ropsten",
