--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ NEXTAUTH_URL=http://localhost:3000
 
 # Default URLS
 NEXT_PUBLIC_API_HOST=http://localhost:3000
+NEXT_PUBLIC_EVENTS_API=http://localhost:3334
 NEXT_PUBLIC_HOME_URL=http://localhost:3000
 
 # Don't forget to deploy new contracts by using /parity route
@@ -69,12 +70,6 @@ NEXT_IPFS_PROJECT_ID=
 NEXT_IPFS_PROJECT_SECRET=
 NEXT_PUBLIC_IPFS_BASE=https://ipfs.infura.io/ipfs
 
-# Twitter integration
-NEXT_TWITTER_APIKEY=
-NEXT_TWITTER_APIKEY_SECRET=
-NEXT_TWITTER_ACCESS_TOKEN=
-NEXT_TWITTER_ACCESS_SECRET=
-
 # Default parameters to network
 NEXT_PUBLIC_DISPUTABLE_TIME_MIN=60
 NEXT_PUBLIC_DISPUTABLE_TIME_MAX=20*24*60*60
@@ -91,7 +86,7 @@ NEXT_PUBLIC_ALLOW_CUSTOM_TOKENS=1
 NEXT_PUBLIC_CURRENCY_API=https://api.coingecko.com/api/v3
 NEXT_PUBLIC_CURRENCY_ID=bepro-network
 NEXT_PUBLIC_CURRENCY_MAIN=usd
-NEXT_PUBLIC_CURRENCY_VSLIST=[{value: "btc", label: "Bitcoin"}, {value: "eth", label: "Ethereum"}, {value: "usd", label: "US Dollar"}, {value: "eur", label: "Euro"}]
+NEXT_PUBLIC_CURRENCY_VSLIST=[{"value": "btc", "label": "Bitcoin"}, {"value": "eth", "label": "Ethereum"}, {"value": "usd", "label": "US Dollar"}, {"value": "eur", "label": "Euro"}]
 
 NEXT_ELASTIC_SEARCH_URL=
 NEXT_ELASTIC_SEARCH_USERNAME=
