--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
     "@metamask/jazzicon": "^2.0.0",
-    "@taikai/dappkit": "^2.1.1",
+    "@taikai/dappkit": "2.1.4",
     "@vlsergey/react-bootstrap-pagination": "^3.2.1",
     "abort-controller": "^3.0.0",
     "axios": "^0.26.1",
