--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "14.17.0"
   },
   "scripts": {
+    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
     "prestart": "npm run migrate",
     "migrate": "sequelize db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
@@ -18,57 +19,62 @@
     "schedules": "node schedules.js"
   },
   "dependencies": {
-    "@vlsergey/react-bootstrap-pagination": "^3.2.1",
-    "axios": "^0.21.1",
+    "@vlsergey/react-bootstrap-pagination": "3.2.1",
+    "axios": "0.21.1",
     "bepro-js-v1": "1.2.11",
-    "bootstrap": "^5.1.3",
-    "clsx": "^1.1.1",
-    "cron": "^1.8.2",
-    "cross-env": "^7.0.3",
-    "date-fns": "^2.11.1",
-    "file-type": "^17.1.1",
-    "form-data": "^4.0.0",
-    "formidable": "^2.0.1",
-    "jimp": "^0.16.1",
-    "lodash": "^4.17.21",
-    "markdown-to-text": "^0.1.1",
-    "marked": "^3.0.4",
+    "bootstrap": "5.1.3",
+    "clsx": "1.1.1",
+    "cron": "1.8.2",
+    "cross-env": "7.0.3",
+    "date-fns": "2.29.3",
+    "file-type": "17.1.1",
+    "form-data": "4.0.0",
+    "formidable": "2.0.1",
+    "jimp": "0.16.1",
+    "lodash": "4.17.21",
+    "markdown-to-text": "0.1.1",
+    "marked": "3.0.4",
     "next": "11.1.2",
     "next-auth": "4.3.1",
-    "next-i18next": "^9.2.0",
-    "next-seo": "^4.28.1",
-    "nookies": "^2.5.2",
+    "next-i18next": "9.2.0",
+    "next-seo": "4.28.1",
+    "nookies": "2.5.2",
     "octokit": "1.0.5",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
+    "pg": "8.7.1",
+    "pg-hstore": "2.3.4",
     "react": "17.0.2",
     "react-bootstrap": "2.2.1",
     "react-device-detect": "1.17.0",
     "react-dom": "17.0.2",
-    "react-dropzone": "^12.0.2",
-    "react-number-format": "^4.6.4",
-    "react-select": "^4.3.1",
-    "sanitize-html": "^2.5.1",
-    "sass": "^1.32.13",
+    "react-dropzone": "12.0.2",
+    "react-number-format": "4.6.4",
+    "react-select": "4.3.1",
+    "sanitize-html": "2.5.1",
+    "sass": "1.55.0",
     "sequelize": "6.11.0",
-    "sequelize-cli": "^6.2.0",
-    "text2png": "^2.3.0",
-    "tiny-emitter": "^2.1.0",
-    "twitter-api-v2": "^1.10.0",
-    "uuid": "^8.3.2"
+    "sequelize-cli": "6.2.0",
+    "text2png": "2.3.0",
+    "tiny-emitter": "2.1.0",
+    "twitter-api-v2": "1.10.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@octokit/types": "^6.26.0",
-    "@types/cookie": "^0.4.1",
-    "@types/formidable": "^2.0.4",
-    "@types/lodash": "^4.14.171",
-    "@types/node": "^13.13.52",
-    "@types/react": "^17.0.2",
-    "@types/react-select": "^4.0.15",
-    "@types/uuid": "^8.3.4",
-    "typescript": "^4.3.2"
+    "@octokit/types": "6.26.0",
+    "@types/cookie": "0.4.1",
+    "@types/formidable": "2.0.4",
+    "@types/lodash": "4.14.171",
+    "@types/node": "13.13.52",
+    "@types/react": "17.0.43",
+    "@types/react-select": "4.0.15",
+    "@types/uuid": "8.3.4",
+    "typescript": "4.3.2"
   },
   "resolutions": {
-    "@types/react": "17.0.2"
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
+  "overrides": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
