DEV-879 add min value bounty settings

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,8 @@ NEXT_PUBLIC_DEFAULT_NETWORK_NAME=bepro
 
 # Define if user can add custom tokens for bounty creation
 NEXT_PUBLIC_ALLOW_CUSTOM_TOKENS=1
+# Define minimum value for bounty creation
+NEXT_MIN_BOUNTY_VALUE_WEI=0.000000000000000100 #100wei
 
 NEXT_PUBLIC_CURRENCY_API=https://api.coingecko.com/api/v3
 NEXT_PUBLIC_CURRENCY_ID=bepro-network
