math ipfs env to microservice

--- a/.env.example
+++ b/.env.example
@@ -57,11 +57,10 @@ NEXT_DB_USERNAME=
 NEXT_DB_LOG=
 
 # Ipfs to upload files
-NEXT_IPFS_HOST=ipfs.infura.io
-NEXT_IPFS_PORT=5001
 NEXT_IPFS_PROJECT_ID=
 NEXT_IPFS_PROJECT_SECRET=
-NEXT_PUBLIC_IPFS_BASE=https://ipfs.infura.io/ipfs
+NEXT_IPFS_UPLOAD_ENDPOINT=https://ipfs.infura.io:5001/api/v0
+NEXT_PUBLIC_IPFS_BASE=https://YOUR-GATWAY-SUBDOMAIN.infura-ipfs.io/ipfs
 
 # Default parameters to network
 NEXT_PUBLIC_DISPUTABLE_TIME_MIN=60
