DEV-877 update auth and github-gatway docs

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ NEXT_GH_CLIENT_ID=
 NEXT_GH_SECRET=
 
 # Create new github token for Bot
-NEXT_PUBLIC_GH_TOKEN=
+NEXT_GH_TOKEN=
 NEXT_PUBLIC_GH_USER=
 
 NEXT_GH_MAINBRANCH=master
