DEV-877 improve readme

--- a/.env.example
+++ b/.env.example
@@ -49,11 +49,11 @@ NEXT_GH_OWNER=
 NEXT_GH_REPO=
 
 # Database Settings
-NEXT_DB_DATABASE=
-NEXT_DB_HOST=
-NEXT_DB_PASSWORD=
-NEXT_DB_PORT=
-NEXT_DB_USERNAME=
+NEXT_DB_DATABASE=github
+NEXT_DB_HOST=localhost
+NEXT_DB_PASSWORD=github
+NEXT_DB_PORT=54320
+NEXT_DB_USERNAME=github
 NEXT_DB_LOG=
 
 # Ipfs to upload files
