--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ## Wallet
-# Address to use as admin on /administration
+# Address to use as admin on /administration page
 NEXT_PUBLIC_ADMIN_WALLET_ADDRESS=
 # A private key for eventual send calls made by the api
 NEXT_WALLET_PRIVATE_KEY=
