Dev 877 update readme md to match new configurations (#652)
* DEV-877 update ganache and metamask docs

* DEV-877 update ganache and metamask docs

* DEV-877 update auth and github-gatway docs

* DEV-877 improve readme

* DEV-877 fix doc label

* Rename DEPLOY-SMART-CONTRACT.MD to DEPLOY-SMART-CONTRACT.md

* Update docs/GANACHE.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/GANACHE.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/METAMASK.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/GANACHE.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/NETWORK-MANAGER.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/NETWORK-MANAGER.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/METAMASK.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update .env.example

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/AUTHENTICATION.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update .env.example

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/DEPLOY-SMART-CONTRACT.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/METAMASK.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/METAMASK.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/DEPLOY-SMART-CONTRACT.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/GITHUB-GATEWAY.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/GITHUB-GATEWAY.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* Update docs/DEPLOY-SMART-CONTRACT.md

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* DEV-877 fix picture path

* DEV-877 remove deprecated comment

* DEV-877 restore CONTRIBUTING file

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ## Wallet
-# Address to use as admin on /parity
+# Address to use as admin on /administration page
 NEXT_PUBLIC_ADMIN_WALLET_ADDRESS=
 # A private key for eventual send calls made by the api
 NEXT_WALLET_PRIVATE_KEY=
@@ -8,6 +8,15 @@ NEXT_WALLET_PRIVATE_KEY=
 DEPLOY_OWNER_ADDRESS=
 DEPLOY_PRIVATE_KEY=
 DEPLOY_INFURA_KEY=
+
+# Create a new infura provider (or any other web3 provider) and add the id here
+NEXT_PUBLIC_WEB3_CONNECTION=wss://kovan.infura.io/ws/v3/
+
+# MetaMask Network Configs
+NEXT_PUBLIC_NATIVE_TOKEN_NAME=ETH
+NEXT_PUBLIC_NEEDS_CHAIN_ID=42
+NEXT_PUBLIC_NEEDS_CHAIN_NAME=kovan
+NEXT_PUBLIC_BLOCKSCAN_LINK=kova.etherscan.com
 
 # NextAuth - run `openssl rand -base64 32` to generate a new authsecret
 NEXTAUTH_SECRET=
@@ -18,7 +27,6 @@ NEXT_PUBLIC_API_HOST=http://localhost:3000
 NEXT_PUBLIC_EVENTS_API=http://localhost:3334
 NEXT_PUBLIC_HOME_URL=http://localhost:3000
 
-# Don't forget to deploy new contracts by using /parity route
 NEXT_PUBLIC_CONTRACT_ADDRESS=
 NEXT_PUBLIC_SETTLER_ADDRESS=
 NEXT_PUBLIC_TRANSACTION_ADDRESS=
@@ -26,34 +34,25 @@ NEXT_PUBLIC_NETWORK_REGISTRY_ADDRESS=
 NEXT_PUBLIC_NFT_ADDRESS=
 NEXT_PUBLIC_NFT_URI=
 
-# Create a new infura provider (or anyother web3 provider) and add the id here
-NEXT_PUBLIC_WEB3_CONNECTION=wss://kovan.infura.io/ws/v3/
-
 ## GitHub
 # Create a github OAuthApp and add information here
 NEXT_GH_CLIENT_ID=
 NEXT_GH_SECRET=
 
 # Create new github token for Bot
-NEXT_PUBLIC_GH_TOKEN=
+NEXT_GH_TOKEN=
 NEXT_PUBLIC_GH_USER=
 
 NEXT_GH_MAINBRANCH=master
 NEXT_GH_OWNER=
 NEXT_GH_REPO=
 
-# MetaMask Network Configs
-NEXT_PUBLIC_NATIVE_TOKEN_NAME=ETH
-NEXT_PUBLIC_NEEDS_CHAIN_ID=42
-NEXT_PUBLIC_NEEDS_CHAIN_NAME=kovan
-NEXT_PUBLIC_BLOCKSCAN_LINK=kova.etherscan.com
-
 # Database Settings
-NEXT_DB_DATABASE=
-NEXT_DB_HOST=
-NEXT_DB_PASSWORD=
-NEXT_DB_PORT=
-NEXT_DB_USERNAME=
+NEXT_DB_DATABASE=github
+NEXT_DB_HOST=localhost
+NEXT_DB_PASSWORD=github
+NEXT_DB_PORT=54320
+NEXT_DB_USERNAME=github
 NEXT_DB_LOG=
 
 # Ipfs to upload files
