DEV-982 create migrations

--- a/.env.example
+++ b/.env.example
@@ -94,3 +94,11 @@ EVENTS_PER_REQUEST=
 
 # defines chain start block when checking migrations
 MIGRATION_START_BLOCK=0
+# Enables KYC per bounty provided by Synaps
+ENABLE_KYC=
+
+# key-pair for using synaps
+# dont ever share "SYNAPS_KEY" with anyone
+SYNAPS_KEY=
+SYNAPS_CLIENT_ID=
+SYNAPS_SESSION_ID=
