--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@elastic/elasticsearch": "^8.2.1",
     "@metamask/jazzicon": "^2.0.0",
     "@taikai/dappkit": "^2.1.10",
+    "@synaps-io/react-verify": "^1.0.3",
     "@vlsergey/react-bootstrap-pagination": "^3.2.1",
     "abort-controller": "^3.0.0",
     "axios": "^0.26.1",
