--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,12 @@ NEXT_PUBLIC_CURRENCY_VSLIST=[{"value": "btc", "label": "Bitcoin"}, {"value": "et
 NEXT_ELASTIC_SEARCH_URL=
 NEXT_ELASTIC_SEARCH_USERNAME=
 NEXT_ELASTIC_SEARCH_PASSWORD=
+
+# Enables KYC per bounty provided by Synaps
+ENABLE_KYC=
+
+# key-pair for using synaps
+# dont ever share "SYNAPS_KEY" with anyone
+SYNAPS_KEY=
+SYNAPS_CLIENT_ID=
+SYNAPS_SESSION_ID=
