--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
     "@metamask/jazzicon": "^2.0.0",
+    "@synaps-io/react-verify": "^1.0.3",
     "@taikai/dappkit": "^2.1.9",
     "@vlsergey/react-bootstrap-pagination": "^3.2.1",
     "abort-controller": "^3.0.0",
