adjusting migration to use contract events

--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,7 @@ NEXT_PUBLIC_CURRENCY_VSLIST=[{"value": "btc", "label": "Bitcoin"}, {"value": "et
 NEXT_ELASTIC_SEARCH_URL=
 NEXT_ELASTIC_SEARCH_USERNAME=
 NEXT_ELASTIC_SEARCH_PASSWORD=
+
+# defines the starting block to run the script that reads information from the contract to fill in the curators in the database and if you are going to use it
+BULK_CHAIN_START_BLOCK_MIGRATION_CURATORS=0
+SKIP_MIGRATION_SEED_CURATORS=false
