--- a/.env.example
+++ b/.env.example
@@ -88,3 +88,7 @@ NEXT_ELASTIC_SEARCH_PASSWORD=
 # defines the starting block to run the script that reads information from the contract to fill in the curators in the database and if you are going to use it
 BULK_CHAIN_START_BLOCK_MIGRATION_CURATORS=0
 SKIP_MIGRATION_SEED_CURATORS=false
+
+# defines the starting block to run the script that reads information from the contract to fill in the leaderboard in the database and if you are going to use it
+BULK_CHAIN_START_BLOCK_MIGRATION_LEADERBOARD=0
+SKIP_MIGRATION_SEED_LEADERBOARD=false
