adding new env EVENTS_PER_REQUEST

--- a/.env.example
+++ b/.env.example
@@ -92,3 +92,6 @@ SKIP_MIGRATION_SEED_CURATORS=false
 # defines the starting block to run the script that reads information from the contract to fill in the leaderboard in the database and if you are going to use it
 BULK_CHAIN_START_BLOCK_MIGRATION_LEADERBOARD=0
 SKIP_MIGRATION_SEED_LEADERBOARD=false
+
+#Number of blocks per request (Optional) - used for migrations with very large blocks
+EVENTS_PER_REQUEST=
