--- a/.env.example
+++ b/.env.example
@@ -95,10 +95,9 @@ EVENTS_PER_REQUEST=
 # defines chain start block when checking migrations
 MIGRATION_START_BLOCK=0
 # Enables KYC per bounty provided by Synaps
-NEXT_ENABLE_KYC=true
+NEXT_PUBLIC_ENABLE_KYC=true
 
 # key-pair for using synaps
-# dont ever share "SYNAPS_KEY" with anyone
 NEXT_KYC_API=https://individual-api.synaps.io/v3
 NEXT_SYNAPS_KEY=
 NEXT_SYNAPS_CLIENT_ID=
