--- a/.env.example
+++ b/.env.example
@@ -86,10 +86,9 @@ NEXT_ELASTIC_SEARCH_USERNAME=
 NEXT_ELASTIC_SEARCH_PASSWORD=
 
 # Enables KYC per bounty provided by Synaps
-NEXT_ENABLE_KYC=true
+NEXT_PUBLIC_ENABLE_KYC=true
 
 # key-pair for using synaps
-# dont ever share "SYNAPS_KEY" with anyone
 NEXT_KYC_API=https://individual-api.synaps.io/v3
 NEXT_SYNAPS_KEY=
 NEXT_SYNAPS_CLIENT_ID=
