adding migration seed proposal to .env-example

--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,7 @@ NEXT_ELASTIC_SEARCH_PASSWORD=
 
 SKIP_MIGRATION_SEED_CURATORS=false
 SKIP_MIGRATION_SEED_LEADERBOARD=false
+SKIP_MIGRATION_SEED_PROPOSAL=false
 
 #Number of blocks per request (Optional) - used for migrations with very large blocks
 EVENTS_PER_REQUEST=
