--- a/.env.example
+++ b/.env.example
@@ -94,3 +94,13 @@ EVENTS_PER_REQUEST=
 
 # defines chain start block when checking migrations
 MIGRATION_START_BLOCK=0
+
+# Enables KYC per bounty provided by Synaps
+NEXT_PUBLIC_ENABLE_KYC=true
+
+# key-pair for using synaps
+NEXT_KYC_API=https://individual-api.synaps.io/v3
+NEXT_SYNAPS_KEY=
+NEXT_SYNAPS_CLIENT_ID=
+NEXT_SYNAPS_SESSION_ID=
+NEXT_SYNAPS_CURRENT_TIER=
