--- a/.env.example
+++ b/.env.example
@@ -127,3 +127,13 @@ ELASTIC_APM_LOG_LEVEL=
 
 # true|false - should we index Logger.trace() into elastic
 ELASTIC_INDEX_STACK_TRACE=
+
+# Enables KYC per bounty provided by Synaps
+NEXT_PUBLIC_ENABLE_KYC=true
+
+# key-pair for using synaps
+NEXT_KYC_API=https://individual-api.synaps.io/v3
+NEXT_SYNAPS_KEY=
+NEXT_SYNAPS_CLIENT_ID=
+NEXT_SYNAPS_SESSION_ID=
+NEXT_SYNAPS_CURRENT_TIER=
