--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@metamask/eth-sig-util": "^5.0.2",
     "@metamask/jazzicon": "^2.0.0",
     "@primer/css": "^20.8.0",
+    "@synaps-io/react-verify": "^1.0.3",
     "@taikai/dappkit": "^2.1.10",
     "@taikai/scribal": "^1.0.3",
     "@vlsergey/react-bootstrap-pagination": "^3.2.1",
