create docker local enviroment

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "npx eslint . --fix --ext .ts,.tsx",
+    "docker:local:up": "docker-compose -f ./docker/docker-compose.local.yml up -d",
+    "docker:local:down": "docker-compose -f ./docker/docker-compose.local.yml down",
+    "docker:quickstart:up": "docker-compose -f ./docker/docker-compose.quickstart.yml up -d",
+    "docker:quickstart:down": "docker-compose -f ./docker/docker-compose.quickstart.yml down",
     "generate-settings-types": "node ./scripts/settings/generate-types.js",
     "deploy:local": "node ./scripts/deploy-v2 -n development",
     "deploy:kovan": "node ./scripts/deploy-v2 -n kovan",
