--- a/.env.example
+++ b/.env.example
@@ -94,3 +94,12 @@ EVENTS_PER_REQUEST=
 
 # defines chain start block when checking migrations
 MIGRATION_START_BLOCK=0
+
+# Leaderboard points per type
+NEXT_PUBLIC_BOUNTY_CLOSED_DEV=
+NEXT_PUBLIC_BOUNTY_CLOSED_OWNER=
+NEXT_PUBLIC_BOUNTY_OPENED=
+NEXT_PUBLIC_BOUNTY_CANCELED=
+NEXT_PUBLIC_PROPOSAL_CREATED=
+NEXT_PUBLIC_PROPOSAL_ACCEPTED=
+NEXT_PUBLIC_PROPOSAL_REJECTED=
