--- a/.env.example
+++ b/.env.example
@@ -102,5 +102,5 @@ NEXT_PUBLIC_ENABLE_KYC=true
 NEXT_KYC_API=https://individual-api.synaps.io/v3
 NEXT_SYNAPS_KEY=
 NEXT_SYNAPS_CLIENT_ID=
-NEXT_SYNAPS_SESSION_ID=
-NEXT_SYNAPS_CURRENT_TIER=
+#types/settings.d.ts#L17 ex: [{"id": "1234", "name": "Phone", "steps_id":["12345678"]}]
+NEXT_SYNAPS_TIER_LIST= 
