Dev 778 bounties leaderboard (#806)
* adding new columns

* use correct component

* fix

* fix dispute btn not appearing

* fix proposal small progress value

* calculating score

* fix env var name

* adding script and migration to calculate old leaderbord score

* fix

* fix pr reviews

--- a/.env.example
+++ b/.env.example
@@ -137,3 +137,12 @@ NEXT_SYNAPS_KEY=
 NEXT_SYNAPS_CLIENT_ID=
 #types/settings.d.ts#L17 ex: [{"id": "1234", "name": "Phone", "steps_id":["12345678"]}]
 NEXT_SYNAPS_TIER_LIST= 
+
+# Leaderboard points per type
+NEXT_PUBLIC_BOUNTY_CLOSED_DEV=
+NEXT_PUBLIC_BOUNTY_CLOSED_OWNER=
+NEXT_PUBLIC_BOUNTY_OPENED=
+NEXT_PUBLIC_BOUNTY_CANCELED=
+NEXT_PUBLIC_PROPOSAL_CREATED=
+NEXT_PUBLIC_PROPOSAL_ACCEPTED=
+NEXT_PUBLIC_PROPOSAL_REJECTED=
