introduce Appollodorus env to deploys

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "deploy:aurelius": "node ./scripts/deploy-v2 -n aurelius",
     "deploy:aurora": "node ./scripts/deploy-v2 -n aurora",
     "deploy:bsc": "node ./scripts/deploy-v2 -n bsc",
+    "deploy:appolodorus": "node ./scripts/deploy-v2 -n appolodorus",
     "ganache:dev": "ganache -h 0.0.0.0 -p 8545 -a 50  -s 0x6d2119524d65ea0b15b214ef260d3acdf8ca0ec6ec68045b5785d970f5ad97bd3d0025d212e625a8a21920852cc165c10faa6d8387a0c2530d1ffc0d265d92935749"
   },
   "dependencies": {
