--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "file-type": "^17.1.1",
     "form-data": "^4.0.0",
     "formidable": "^2.0.1",
+    "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
     "markdown-to-text": "^0.1.1",
     "marked": "^4.0.12",
+    "memory-cache": "^0.2.0",
     "next": "12.1.0",
     "next-auth": "4.3.1",
     "next-i18next": "^10.5.0",
