introduce GA to the page, and trackPageViews

--- a/.env.example
+++ b/.env.example
@@ -103,3 +103,6 @@ NEXT_PUBLIC_BOUNTY_CANCELED=
 NEXT_PUBLIC_PROPOSAL_CREATED=
 NEXT_PUBLIC_PROPOSAL_ACCEPTED=
 NEXT_PUBLIC_PROPOSAL_REJECTED=
+
+# Google Analytics Measurement ID
+NEXT_PUBLIC_GA_MEASUREMENT_ID=
