adding middleware folder

--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,7 @@
           ["/^graphql/"],
           ["/^helpers/"],
           ["/^interfaces/"],
+          ["/^middleware/"],
           ["/^pages/"],
           ["/^services/"],
           ["/^styles/"],
