BEPRO-1326 add /api-doc to project

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sass": "^1.49.9",
     "sequelize": "6.17.0",
     "sequelize-cli": "^6.4.1",
+    "swagger-ui-react": "^4.15.5",
     "tiny-emitter": "^2.1.0",
     "uuid": "^8.3.2",
     "yargs": "^17.4.0"
