--- a/.env.example
+++ b/.env.example
@@ -106,3 +106,24 @@ NEXT_PUBLIC_PROPOSAL_REJECTED=
 
 # Google Analytics Measurement ID
 NEXT_PUBLIC_GA_MEASUREMENT_ID=
+
+# API log level: 0 none, 1 error, 2 warn, 3 info, 4 trace, 5 log, 6 debug
+LOG_LEVEL=6
+
+# Elastic APM integration secret token
+ELASTIC_APM_SECRET_TOKEN=
+
+# Elastic APM integration server url
+ELASTIC_APM_SERVER_URL=
+
+# Elastic APM integration service name
+ELASTIC_APM_SERVICE_NAME=
+
+# true|false - Enable Elastic APM integration
+ELASTIC_APM_ACTIVE=
+
+# Elastic APM _local_ log level
+ELASTIC_APM_LOG_LEVEL=
+
+# true|false - should we index Logger.trace() into elastic
+ELASTIC_INDEX_STACK_TRACE=
