--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "migrate": "sequelize db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
     "clean": "npm cache clean --force && rm -rf .next",
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env NODE_OPTIONS=\"--inspect --require=elastic-apm-node/start-next.js\" next dev",
     "prebuild": "next telemetry disable",
     "build": "next build",
     "start": "next start",
@@ -50,6 +50,7 @@
     "cron": "^1.8.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "elastic-apm-node": "^3.42.0",
     "file-type": "^17.1.1",
     "form-data": "^4.0.0",
     "formidable": "^2.0.1",
