--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@metamask/jazzicon": "^2.0.0",
     "@primer/css": "^20.8.0",
     "@taikai/dappkit": "^2.1.10",
+    "@taikai/scribal": "^1.0.3",
     "@vlsergey/react-bootstrap-pagination": "^3.2.1",
     "abort-controller": "^3.0.0",
     "axios": "^0.26.1",
