--- a/.env.example
+++ b/.env.example
@@ -127,3 +127,22 @@ ELASTIC_APM_LOG_LEVEL=
 
 # true|false - should we index Logger.trace() into elastic
 ELASTIC_INDEX_STACK_TRACE=
+
+# Enables KYC per bounty provided by Synaps
+NEXT_PUBLIC_ENABLE_KYC=true
+
+# key-pair for using synaps
+NEXT_KYC_API=https://individual-api.synaps.io/v3
+NEXT_SYNAPS_KEY=
+NEXT_SYNAPS_CLIENT_ID=
+#types/settings.d.ts#L17 ex: [{"id": "1234", "name": "Phone", "steps_id":["12345678"]}]
+NEXT_SYNAPS_TIER_LIST= 
+
+# Leaderboard points per type
+NEXT_PUBLIC_BOUNTY_CLOSED_DEV=
+NEXT_PUBLIC_BOUNTY_CLOSED_OWNER=
+NEXT_PUBLIC_BOUNTY_OPENED=
+NEXT_PUBLIC_BOUNTY_CANCELED=
+NEXT_PUBLIC_PROPOSAL_CREATED=
+NEXT_PUBLIC_PROPOSAL_ACCEPTED=
+NEXT_PUBLIC_PROPOSAL_REJECTED=
