--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ NEXT_PUBLIC_NATIVE_TOKEN_NAME=ETH
 NEXT_PUBLIC_NEEDS_CHAIN_ID=42
 NEXT_PUBLIC_NEEDS_CHAIN_NAME=kovan
 NEXT_PUBLIC_BLOCKSCAN_LINK=kova.etherscan.com
+NEXT_PUBLIC_CHAIN_DECIMALS=18
 
 # NextAuth - run `openssl rand -base64 32` to generate a new authsecret
 NEXTAUTH_SECRET=
@@ -88,6 +89,7 @@ NEXT_ELASTIC_SEARCH_PASSWORD=
 SKIP_MIGRATION_SEED_CURATORS=false
 SKIP_MIGRATION_SEED_LEADERBOARD=false
 SKIP_MIGRATION_SEED_PROPOSAL=false
+SKIP_MIGRATION_MULTICHAIN=true
 
 #Number of blocks per request (Optional) - used for migrations with very large blocks
 EVENTS_PER_REQUEST=
@@ -136,7 +138,7 @@ NEXT_KYC_API=https://individual-api.synaps.io/v3
 NEXT_SYNAPS_KEY=
 NEXT_SYNAPS_CLIENT_ID=
 #types/settings.d.ts#L17 ex: [{"id": "1234", "name": "Phone", "steps_id":["12345678"]}]
-NEXT_SYNAPS_TIER_LIST= 
+NEXT_SYNAPS_TIER_LIST=
 
 # Leaderboard points per type
 NEXT_PUBLIC_BOUNTY_CLOSED_DEV=
