adding new .env to seed contract creation date

--- a/.env.example
+++ b/.env.example
@@ -90,6 +90,7 @@ SKIP_MIGRATION_SEED_CURATORS=false
 SKIP_MIGRATION_SEED_LEADERBOARD=false
 SKIP_MIGRATION_SEED_PROPOSAL=false
 SKIP_MIGRATION_MULTICHAIN=true
+SKIP_MIGRATION_SEED_CONTRACT_DATE_ISSUE=false
 
 #Number of blocks per request (Optional) - used for migrations with very large blocks
 EVENTS_PER_REQUEST=
