--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@primer/css": "^20.8.0",
     "@synaps-io/react-verify": "^1.0.3",
     "@taikai/dappkit": "^2.1.11",
-    "@synaps-io/react-verify": "^1.0.3",
     "@taikai/scribal": "^1.0.3",
     "@vlsergey/react-bootstrap-pagination": "^3.2.1",
     "abort-controller": "^3.0.0",
@@ -86,6 +85,7 @@
     "sequelize-cli": "^6.4.1",
     "swagger-ui-react": "^4.15.5",
     "tiny-emitter": "^2.1.0",
+    "use-debounce": "^9.0.4",
     "uuid": "^8.3.2",
     "yargs": "^17.4.0"
   },
