install sengrid mail

--- a/.env.example
+++ b/.env.example
@@ -150,3 +150,7 @@ NEXT_PUBLIC_BOUNTY_CANCELED=
 NEXT_PUBLIC_PROPOSAL_CREATED=
 NEXT_PUBLIC_PROPOSAL_ACCEPTED=
 NEXT_PUBLIC_PROPOSAL_REJECTED=
+
+# Sendgrid credentials
+NEXT_SENDGRID_MAIL_API_KEY=
+NEXT_SENDGRID_MAIL_FROM=email@email.com
